src/main/java/com/example/languagelearning/error/ClientException.java
package com.example.languagelearning.error;

public class ClientException extends RuntimeException{

    public ClientException(String message) {
        super(message);
    }
}
